# Datalineage-Doctor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
agent/: loop.py  notifications.py  parser.py  prompts.py
agent/schemas/: __init__.py  report.py  tool_outputs.py
agent/tools/: history.py  lineage.py  ownership.py  pipeline.py  quality.py  registry.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py
knowledge/: BRD.md  OM_jwt_token_generation.md  SRS.md  a_master_prompt.md  b_openmetadata_deep_dive.md  c_hackathon_ideas.md  code-examples.md  deployment.md  development-guideline.md  how-services-connect.md  project-features.md  rca-agent-architecture.md
nginx/: nginx.conf
om_client/: client.py  incidents.py  lineage.py  ownership.py  pipeline.py  quality.py
prometheus/: prometheus.yml
scripts/: seed_demo.py  server_setup.sh  trigger_demo.py  wait_for_incident.py  wait_for_om.py
tests/: conftest.py  test_agent_loop.py  test_dashboard.py  test_health.py  test_incident_store.py  test_notifications.py  test_om_client.py  test_om_client_incidents.py  test_om_client_lineage.py  test_parser.py  test_registry.py  test_tools_history.py  test_tools_lineage.py  test_tools_ownership.py  test_tools_pipeline.py  test_tools_quality.py  test_webhook.py  test_worker_tasks.py
worker/: celery_app.py  persistence.py  tasks.py
(+52 files in other folders)
