[project]
name = "datalineage-doctor"
version = "1.0.0"
description = "LLM-powered RCA assistant for OpenMetadata incidents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary,pool]>=3.2",
  "alembic>=1.13",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "openai>=1.40",
  "tenacity>=8.5",
  "structlog>=24.4",
  "prometheus-client>=0.21",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "cerebras-cloud-sdk>=1.67.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "anyio>=4.6",
  "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
